# rostermine

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  shell.nix
src/: arguments.rs  auth.rs  fetch.rs  main.rs  parse.rs
src/fetch/: json.rs  manifest.rs  minecraft.rs  textfile.rs  vanilla.rs  version.rs
src/fetch/modloader/: fabric.rs
src/util/: error.rs
